gcc_errors.txt
Blackjack.c: In function 'main':
Blackjack.c:77:20: error: expected expression before ';' token
   77 |         for(ascii =; ascii < 300 ; ascii++){
      |                    ^
